third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/zeroable/enum.stderr
error: cannot derive `Zeroable` for an enum
 --> tests/ui/compile-fail/zeroable/enum.rs:5:1
  |
5 | enum Num {
  | ^^^^

error: cannot derive `Zeroable` for an enum
  --> tests/ui/compile-fail/zeroable/enum.rs:11:1
   |
11 | enum Num2 {
   | ^^^^
